--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat! Hahahaha
+  Fork me? Fork you, @octocat! Suneil was here
 </p>
 
 </body>
